--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,16 +21,26 @@
     padding-bottom: 10px;
 }
 
-.booksContainer {
+.booksWrapper {
     width: 100%;
     min-height: auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+    padding: 20px;
+    gap: 15px;
+}
+
+.booksContainer {
+    width: 100%;
+    display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
 
 .book {
-    width: 100px;
+    width: 150px;
     border: 1px solid black;
 }
