--- a/src/App.module.css
+++ b/src/App.module.css
@@ -34,13 +34,22 @@
 
 .booksContainer {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    row-gap: 20px;
 }
 
 .book {
-    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 0 auto;
+    width: 250px;
     border: 1px solid black;
+}
+
+.book img {
+    width: 100%;
 }
