--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,15 +1,18 @@
+* {
+    box-sizing: border-box;
+}
+
 .app {
-    width: 80%;
+    width: 100%;
     min-height: 100vh;
     margin: 0 auto;
     border-color: black;
-    border-left: 2px solid;
-    border-right: 2px solid;
     display: grid;
     grid-template-rows: auto 1fr;
 }
 
 .hat {
+    background: url('./common/background.jpg');
     width: 100%;
     border-bottom: 1px solid;
     display: flex;
@@ -17,8 +20,27 @@
     align-items: center;
     justify-content: space-around;
     gap: 20px;
+}
+
+.darker {
+    background-color: rgba(44, 43, 43, 0.7);
+    color: #f6f3db;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
     padding-top: 20px;
     padding-bottom: 10px;
+}
+
+.searchWrapper {
+    width: 250px;
+}
+
+.searchWrapper input {
+    width: 100%;
 }
 
 .booksWrapper {
@@ -52,4 +74,23 @@
 
 .book img {
     width: 100%;
+}
+
+.selectsWrapper {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+h1 {
+    font-size: 3em;
+    border: 5px solid #f6f3db;
+    padding: 0 20px;
+}
+
+.searchWrapper {
+    border: 2px solid #f6f3db;
+    padding: 10px;
+    width: 350px;
 }
