--- a/src/App.module.css
+++ b/src/App.module.css
@@ -62,22 +62,29 @@
 }
 
 .book {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
+    display: grid;
+    background-color: #f6f3db;
+    box-shadow: 5px 5px 5px 5px #80806a;
+    width: 200px;
     margin: 0 auto;
-    width: 250px;
-    border: 1px solid black;
+    padding: 10px;
+    justify-content: center;
+    grid-template-rows: 150px 1px auto;
+    row-gap: 5px;
 }
 
 .book img {
-    width: 100%;
+    max-height: 100%;
+    box-shadow: 0 5px 10px 0 rgba(147, 132, 98, 0.5);
+}
+
+
+.imgWrapper {
+    display: flex;
+    justify-content: center;
 }
 
 .selectsWrapper {
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -89,8 +96,64 @@ h1 {
     padding: 0 20px;
 }
 
+.pagesCount {
+    height: 35px;
+    font-size: 1.8em;
+    color: #353c44;
+}
+
 .searchWrapper {
     border: 2px solid #f6f3db;
     padding: 10px;
     width: 350px;
+}
+
+.bookTitle {
+    margin-top: 10px;
+}
+
+.errorMessage {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 25px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fce4e4;
+    border: 1px solid #fcc2c3;
+    float: left;
+}
+
+.errorText {
+    color: #cc0033;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 20px;
+    text-shadow: 1px 1px rgba(250, 250, 250, .3);
+}
+
+.preloader {
+    margin-top: 5px;
+    width: 100%;
+    display: grid;
+}
+
+.preloader img {
+    height: 40px;
+    margin: 0 auto;
+}
+
+.categories {
+    font-style: italic;
+}
+
+.loadMore {
+    height: 40px;
+    margin-top: 5px;
+    color: #353c44;
+    font-size: 1.4em;
+    cursor: pointer;
 }
